css for slider added at .d-block to reduce its size, responsive ness based on view poer tstill in await

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,12 +1,16 @@
+/* begin header slider*/
+
+.d-block {
+    height: 500px;
+}
+
+
 /* begin footer */
 
 footer {
     background: #222;
     color: #aaa;
     padding-top: 10px;
-    position: relative;
-    bottom: 0;
-    margin-bottom: 0%;
 }
 
 footer a {
